# unitree_mujoco

./: .gitignore  pixi.toml
example/walking/: CMakeLists.txt
example/walking/src/: walking_g1.cpp  walking_g1_mjlab.cpp
simulate/: CMakeLists.txt  config.yaml
simulate/src/: main.cc  param.h
unitree_robots/g1/: dolly_scene.xml  g1_29dof.xml
unitree_robots/g1/dolly/: dolly.xml  dolly_assets.xml  dolly_body.xml  material.mtl
unitree_robots/h2/: h2_mujoco.xml  scene.xml
